--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,5 @@
-@media (min-width: 550px)
-h4 {
-    font-size: 6.0rem;
+body {
+    background: url(https://upload.wikimedia.org/wikipedia/commons/8/83/Sky_cloudy.JPG);
+    background-size: cover; 
+	opacity: 0.7;
 }
